# pybotchi

./: .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: python-publish.yml
agents/pybotchi-cli/: example_usage.py  mypy.ini  pyproject.toml
agents/pybotchi-cli/pybotchi_cli/: __init__.py
agents/pybotchi-files/: .flake8  example_usage.py
agents/pybotchi-files/pybotchi_files/: __init__.py  utils.py
docs/: POST.md  action-high-level.md  action.md  interactive-action.md  mcp.md  non-action.md  server-structure.md
examples/: agent_with_mcp.py  concurrent_combination.py  concurrent_threading_combination.py  full_spec.py  interactive_action.py  interactive_agent.py  jira_agent.py  mcp_prerequisite.py  nested_combination.py  prerequisite.py  sequential.py  sequential_combination.py  sequential_iteration.py  tiny.py
examples/a2a/fastapi/: hello_world_agent.py  prerequisite.py
examples/grpc/: grpc_direct_agent.py  grpc_direct_client.py  grpc_prerequisite.py  grpc_pybotchi_agent.py  grpc_pybotchi_client.py
examples/mcp/: agent_with_mcp.py  jira_agent.py  mcp_direct_agent.py  mcp_direct_client.py  mcp_prerequisite.py  mcp_pybotchi_agent.py  mcp_pybotchi_client.py  mcp_pybotchi_client_for_mcp_atlassian.py
examples/vs/: action_approach.py  langgraph_approach.py  pybotchi_approach.py
posts/: POST.md  mcp.md
pybotchi/: __init__.py  __init__.pyi  action.py  action.pyi  common.py  common.pyi  constants.py  context.py  context.pyi  llm.py  llm.pyi  utils.py  utils.pyi
pybotchi/a2a/: __init__.py
pybotchi/a2a/fastapi/: __init__.py  action.py  common.py  context.py
pybotchi/grpc/: __init__.py  __init__.pyi  action.py  action.pyi  cli.py  cli.pyi  common.py  common.pyi  context.py  context.pyi  exception.py  exception.pyi  handler.py  handler.pyi  pybotchi.proto  pybotchi_pb2.py  pybotchi_pb2.pyi  pybotchi_pb2_grpc.py  pybotchi_pb2_grpc.pyi  utils.pyi
pybotchi/mcp/: __init__.py  __init__.pyi  action.py  action.pyi  common.py  common.pyi  context.py  context.pyi
