[tool.poetry]
name = "pybotchi"
version = "2.0.2"
description = "A deterministic, intent-based AI agent builder."
authors = ["Alexie (Boyong) Madolid <madolid.alexie@gmail.com>"]
readme = "README.md"
repository = "https://github.com/amadolid/pybotchi"
packages = [{ include = "pybotchi" }]

[tool.poetry.dependencies]
python = "<4.0,>=3.12.0"
pydantic = ">=2.0"
orjson = ">=3.9.11"

# langchain dependency to be removed
# Should be optional
langchain = ">=0.3.15"

# MCP Optional
mcp = { version = ">=1.15.0", optional = true }
datamodel-code-generator = { version = ">=0.31.2", optional = true }

# A2A Optional
a2a-sdk = { version = ">=0.3.13", optional = true }
fastapi = { version = ">=0.116.2", optional = true }
sse-starlette = { version = ">=3.0.3", optional = true }
starlette = { version = ">=0.40.0", optional = true }
grpcio = { version = ">=1.76.0", optional = true }
grpcio-tools = { version = ">=1.76.0", optional = true }
grpcio_reflection = { version = ">=1.76.0", optional = true }

[tool.poetry.extras]
mcp = ["mcp", "datamodel-code-generator"]
a2a-fastapi = ["a2a-sdk", "fastapi", "datamodel-code-generator"]
a2a-sse-starlette = ["a2a-sdk", "sse-starlette"]
a2a-starlette = ["a2a-sdk", "starlette"]
a2a-grpc = ["a2a-sdk", "grpcio", "grpcio-tools", "grpcio_reflection"]

[tool.poetry.group.dev.dependencies]
mypy = "1.16.1"
python-dotenv = "1.1.1"
black = "25.1.0"
pre-commit = "4.2.0"
pytest = "8.4.1"
flake8 = "7.3.0"
flake8-import-order = "0.19.2"
flake8-docstrings = "1.7.0"
flake8-comprehensions = "3.16.0"
flake8-bugbear = "24.12.12"
flake8-annotations = "3.1.1"
flake8_simplify = "0.22.0"
pep8-naming = "0.15.1"

# for examples
langchain-openai = ">=0.3.15"
fastapi = ">=0.109.0"
uvicorn = ">=0.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
