[tool.poetry]
name = "pybotchi"
version = "3.1.1"
description = "A deterministic, intent-based AI agent builder."
authors = ["Alexie (Boyong) Madolid <madolid.alexie@gmail.com>"]
readme = "README.md"
repository = "https://github.com/amadolid/pybotchi"
packages = [{ include = "pybotchi" }]

[tool.poetry.dependencies]
python = "<4.0,>=3.12.0"
pydantic = ">=2.0"
orjson = ">=3.9.11"

# langchain-core dependency to be removed
# Should be optional
langchain-core = ">=0.3.15"

# Common optional
datamodel-code-generator = { version = ">=0.31.2", optional = true, extras = [
    "ruff",
] }

# MCP optional
mcp = { version = ">=1.15.0", optional = true }

# GRPC optional
click = { version = ">=8.3.1", optional = true }
grpcio = { version = ">=1.76.0", optional = true }
grpcio-tools = { version = ">=1.76.0", optional = true }
aiofiles = { version = ">=25.1.0", optional = true }

[tool.poetry.group.dev.dependencies]
python-dotenv = "1.1.1"
mypy = "1.19.1"
ruff = "0.14.10"
pre-commit = "4.5.1"
types-protobuf = "6.32.1.20251105"
types-aiofiles = "25.1.0.20251011"
mypy-protobuf = "4.0.0"

# for examples
langchain-openai = ">=0.3.15"
fastapi = ">=0.109.0"
uvicorn = { version = ">=0.38.0", extras = ["standard"] }

[tool.poetry.extras]
mcp = ["mcp", "datamodel-code-generator"]
grpc = [
    "click",
    "grpcio",
    "grpcio-tools",
    "datamodel-code-generator",
    "aiofiles",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pybotchi-grpc = "pybotchi.grpc.cli:main"
pybotchi-grpc-compile = "pybotchi.grpc.cli:compile"
